# lolcode-lsp

./: Cargo.toml  batata.lol
src/: lib.rs  main.rs
