[package]
name = "lolcode-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
lolcode_ast = { path = "/home/sidharta/projects/personal/lolcode-ast" }
tokio = { version = "1.26.0", features = ["full"] }
tower-lsp = "0.19.0"

[rust-analyzer]
procMacro.enabled = true
